lab19-kubernetes-platform-addons/04-external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: external-dns

  template:
    metadata:
      labels:
        app: external-dns

    spec:
      serviceAccountName: external-dns

      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.20.0

          args:
            - --source=gateway-httproute
            - --provider=aws
            - --domain-filter=babajideajisafe.com
            - --zone-id-filter=Z0929933S7BZIF3A7R74
            - --aws-zone-type=public
            - --registry=txt
            - --txt-owner-id=jide-k3s-lab
            - --policy=upsert-only
            - --dry-run
            - --log-level=info
