lab19-kubernetes-platform-addons/03-httproute-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: path-based-route
  namespace: gateway-lab

spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway-lab
      sectionName: http

    - name: shared-gateway
      namespace: gateway-lab
      sectionName: https

  hostnames:
    - "lab.babajideajisafe.com"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: api-service
          port: 8080

    - matches:
        - path:
            type: PathPrefix
            value: /web
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: frontend-svc
          port: 80
